pulldown-cmark-mdcat/tests/snapshots/render/iterm2@commonmark-spec-252-block_quotes.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 122
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/252-block_quotes.md
---
[36m│[0m [3m[33mcode
[0m[36m│[0m 

[36m│[0m [3mnot code[0m
